<resources>
    <string name="app_name">Assignment3-Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name">Name</string>
    <string name="hint_name">Steve Jobs</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="hint_phone_number">000-0000-0000</string>
    <string name="btn_text_add_submit">Add</string>
</resources>
